Remove console.log and give Refresh guest info button a better name
Ticket: #20274

--- a/ui/sections/vms/inspectors/virtual-machine.reel/virtual-machine.html
+++ b/ui/sections/vms/inspectors/virtual-machine.reel/virtual-machine.html
@@ -279,7 +279,7 @@
             "prototype": "blue-shark/ui/button.reel",
             "properties": {
                 "element": {"#": "guestInfoRefresh"},
-                "value": "refreshGuestInfo"
+                "value": "Refresh guest info"
             },
             "bindings": {
                 "disabled": {"<-": "!@owner.object.status.vm_tools_available"},
