fixed replication UI issue

--- a/ui/sections/storage/inspectors/replication.reel/replication.html
+++ b/ui/sections/storage/inspectors/replication.reel/replication.html
@@ -54,7 +54,8 @@
             "properties": {
                 "element": {"#": "source_dataset"},
                 "controller": {"@": "datasetTreeController"},
-                "label": "Source dataset"
+                "label": "Source dataset",
+                "allowPathInput": true
             },
             "bindings": {
                 "selectedPath": {"<->": "@owner.object.datasets.0.master"},
