removes results type
Ticket: #20397

--- a/ui/sections/system/inspectors/preferences.reel/preferences.html
+++ b/ui/sections/system/inspectors/preferences.reel/preferences.html
@@ -144,11 +144,10 @@
             "prototype": "blue-shark/ui/field-file-upload.reel",
             "properties": {
                 "element": {"#": "uploadConfig"},
-                "label": "Upload Config File",
-                "resultType": "file"
+                "label": "Upload Config File"
             },
             "bindings": {
-                 "data": {"<->": "@owner.configFile"}
+                "data": {"<->": "@owner.configFile"}
             }
         },
         "applyConfig": {
