UPDATED: tag name to queued

--- a/ui/sections/task/inspectors/tasks.reel/tasks.html
+++ b/ui/sections/task/inspectors/tasks.reel/tasks.html
@@ -9,7 +9,7 @@
             "properties": {
                 "element": {"#": "owner"},
                 "views": [
-                    {"label": "Executing", "value": "EXECUTING"},
+                    {"label": "Queued", "value": "EXECUTING"},
                     {"label": "Failed", "value": "FAILED"},
                     {"label": "Finished", "value": "FINISHED"}
                 ]
