--- a/ui/sections/vms/inspectors/virtual-machine.reel/virtual-machine.html
+++ b/ui/sections/vms/inspectors/virtual-machine.reel/virtual-machine.html
@@ -420,7 +420,7 @@
                 "value": "VGA Console"
             },
             "bindings": {
-                "classList.has('hide')": {"<-": "@owner.object._hasGraphicDevice"},
+                "classList.has('hide')": {"<-": "!@owner.object._hasGraphicDevice"},
                 "disabled": {"<-": "@owner.object.status.state == 'STOPPED'"}
             }
         },
